--- a/tests/transformers/test_rapbert.ipynb
+++ b/tests/transformers/test_rapbert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.bias', 'cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 18, 768])"
+       "torch.Size([1, 768])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 18, 1024])"
+       "torch.Size([1, 1024])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,23 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 1.5708, -0.7867,  0.3695,  ...,  1.0730, -0.4946, -0.1208],\n",
-       "         [ 0.4086, -0.8935,  0.2968,  ...,  1.8416,  1.0497, -1.1519],\n",
-       "         [ 0.7235,  0.0836, -0.9768,  ..., -0.2204, -0.5774, -1.7679],\n",
-       "         ...,\n",
-       "         [ 1.4654, -0.3428,  0.3720,  ...,  0.7125, -0.4923, -0.9060],\n",
-       "         [ 2.0268,  0.0408, -1.0733,  ...,  0.1879, -0.1402, -1.8658],\n",
-       "         [ 1.5708, -0.7867,  0.3695,  ...,  1.0730, -0.4946, -0.1208]]],\n",
+       "tensor([[-1.0244,  0.5601,  2.3757,  ...,  1.0433,  0.2525, -0.7516]],\n",
        "       grad_fn=<NativeLayerNormBackward0>)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
