--- a/tests/transformers/test_rapbert.ipynb
+++ b/tests/transformers/test_rapbert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,40 +17,17 @@
    "source": [
     "from transformers import AutoTokenizer, AutoModelForMaskedLM, AutoModel, BertModel\n",
     "from torch import nn\n",
-    "import torch"
+    "import torch\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
-   "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
-    "# model = AutoModelForMaskedLM.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
-    "# model = AutoModel.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
-    "model = BertModel.from_pretrained(\"StanfordAIMI/RadBERT\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_str = \"A photo of a lung xray with a visible pleural effusion\"\n",
-    "inputs = tokenizer(input_str, return_tensors=\"pt\")\n",
-    "outputs = model(**inputs)"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -59,115 +36,78 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tensor([  101,   170,  6307,  1104,   170, 13093,   193,  6447,  1114,   170,\n",
-      "         5085,   185,  1513, 12602,   174,  3101, 17268,   102])\n",
-      "[CLS] a photo of a lung xray with a visible pleural effusion [SEP]\n"
+      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
    "source": [
-    "print(inputs['input_ids'][0])\n",
-    "print(tokenizer.decode(inputs['input_ids'][0]))"
+    "class RadBertEmbedder(nn.Module):\n",
+    "    _device = f\"{torch.device('cuda' if torch.cuda.is_available() else 'cpu')}:{torch.cuda.current_device()}\"\n",
+    "    _tokenizer = AutoTokenizer.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
+    "    _model = BertModel.from_pretrained(\"StanfordAIMI/RadBERT\").to('cuda')\n",
+    "\n",
+    "    def __init__(self, emb_dim=32,*args, **kwargs):\n",
+    "        super().__init__()\n",
+    "        self.emb_dim = emb_dim\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(768, emb_dim), # 768 bert output的维度\n",
+    "            nn.LayerNorm(emb_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(emb_dim, emb_dim),\n",
+    "            nn.LayerNorm(emb_dim),\n",
+    "        ).to('cuda')\n",
+    "\n",
+    "    def forward(self, condition):\n",
+    "        start = time.time()\n",
+    "        inputs_list = [self._tokenizer(condition_str, return_tensors=\"pt\").to(self._device) for condition_str in condition]\n",
+    "        with torch.no_grad():\n",
+    "            outputs_list = [self._model(**inputs) for inputs in inputs_list]\n",
+    "        c = torch.stack([outputs.pooler_output[0] for outputs in outputs_list])\n",
+    "        c = self.mlp(c)\n",
+    "        end = time.time()\n",
+    "        print(\"forward_time: \", end-start)\n",
+    "        return c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = outputs.pooler_output\n",
-    "# c = outputs.last_hidden_state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forward_time:  0.9255011081695557\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 768])"
+       "tensor([[-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
+       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
+       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
+       "        ...,\n",
+       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
+       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
+       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292]],\n",
+       "       device='cuda:0', grad_fn=<NativeLayerNormBackward0>)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# emb_layer = nn.Embedding(768, 1024)\n",
-    "\n",
-    "emb_layer = nn.Sequential(\n",
-    "    nn.Linear(768, 1024),\n",
-    "    nn.LayerNorm(1024),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(1024, 1024),\n",
-    "    nn.LayerNorm(1024),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_output = emb_layer(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 1024])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_output.size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-1.0244,  0.5601,  2.3757,  ...,  1.0433,  0.2525, -0.7516]],\n",
-       "       grad_fn=<NativeLayerNormBackward0>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_output"
+    "emb_obj = RadBertEmbedder(emb_dim=1024)\n",
+    "condition = [\"A photo of a lung xray with a visible pleural effusion\"]*64\n",
+    "emb_obj.forward(condition)"
    ]
   }
  ],
