--- a/tests/transformers/test_rapbert.ipynb
+++ b/tests/transformers/test_rapbert.ipynb
@@ -15,41 +15,42 @@
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM, AutoModel, BertModel\n",
+    "from transformers import AutoTokenizer, BertModel\n",
     "from torch import nn\n",
-    "import torch\n",
-    "import time"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
    "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
+    "model = BertModel.from_pretrained(\"StanfordAIMI/RadBERT\").to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class RadBertEmbedder(nn.Module):\n",
     "    _device = f\"{torch.device('cuda' if torch.cuda.is_available() else 'cpu')}:{torch.cuda.current_device()}\"\n",
-    "    _tokenizer = AutoTokenizer.from_pretrained(\"StanfordAIMI/RadBERT\")\n",
-    "    _model = BertModel.from_pretrained(\"StanfordAIMI/RadBERT\").to('cuda')\n",
+    "    _tokenizer = tokenizer\n",
+    "    _model = model\n",
     "\n",
     "    def __init__(self, emb_dim=32,*args, **kwargs):\n",
     "        super().__init__()\n",
@@ -60,46 +61,28 @@
     "            nn.ReLU(),\n",
     "            nn.Linear(emb_dim, emb_dim),\n",
     "            nn.LayerNorm(emb_dim),\n",
-    "        ).to('cuda')\n",
+    "        ).to(self._device)\n",
     "\n",
     "    def forward(self, condition):\n",
-    "        start = time.time()\n",
-    "        inputs_list = [self._tokenizer(condition_str, return_tensors=\"pt\").to(self._device) for condition_str in condition]\n",
-    "        with torch.no_grad():\n",
-    "            outputs_list = [self._model(**inputs) for inputs in inputs_list]\n",
-    "        c = torch.stack([outputs.pooler_output[0] for outputs in outputs_list])\n",
+    "        inputs = self._tokenizer(condition, return_tensors=\"pt\").to(self._device)\n",
+    "        outputs = self._model(**inputs)\n",
+    "        c = outputs.last_hidden_state[:, 0] # [CLS]\n",
     "        c = self.mlp(c)\n",
-    "        end = time.time()\n",
-    "        print(\"forward_time: \", end-start)\n",
     "        return c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "forward_time:  0.9255011081695557\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
-       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
-       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
-       "        ...,\n",
-       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
-       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292],\n",
-       "        [-0.5365,  2.0501,  0.8347,  ..., -0.4111,  1.2516, -0.4292]],\n",
-       "       device='cuda:0', grad_fn=<NativeLayerNormBackward0>)"
+       "torch.Size([64, 1024])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +90,8 @@
    "source": [
     "emb_obj = RadBertEmbedder(emb_dim=1024)\n",
     "condition = [\"A photo of a lung xray with a visible pleural effusion\"]*64\n",
-    "emb_obj.forward(condition)"
+    "c = emb_obj.forward(condition)\n",
+    "c.shape"
    ]
   }
  ],
