--- a/tests/transformers/test_rapbert.ipynb
+++ b/tests/transformers/test_rapbert.ipynb
@@ -16,6 +16,7 @@
    ],
    "source": [
     "from transformers import AutoTokenizer, BertModel\n",
+    "from transformers.utils import PaddingStrategy\n",
     "from torch import nn\n",
     "import torch"
    ]
@@ -29,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
+      "Some weights of the model checkpoint at StanfordAIMI/RadBERT were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,8 @@
     "        ).to(self._device)\n",
     "\n",
     "    def forward(self, condition):\n",
-    "        inputs = self._tokenizer(condition, return_tensors=\"pt\").to(self._device)\n",
+    "        inputs = self._tokenizer(condition, return_tensors=\"pt\", padding=True)\n",
+    "        inputs = inputs.to(self._device)\n",
     "        outputs = self._model(**inputs)\n",
     "        c = outputs.last_hidden_state[:, 0] # [CLS]\n",
     "        c = self.mlp(c)\n",
@@ -73,25 +75,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([  101,   170,  6307,  1104,   170, 13093,   193,  6447,  1114,  5048,\n",
+      "        14494,   117, 20673,  1105,   185,  1513, 12602,   174,  3101, 17268,\n",
+      "          102,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0,     0])\n",
+      "torch.Size([98])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "torch.Size([64, 1024])"
+       "torch.Size([16, 1024])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "emb_obj = RadBertEmbedder(emb_dim=1024)\n",
-    "condition = [\"A photo of a lung xray with a visible pleural effusion\"]*64\n",
-    "c = emb_obj.forward(condition)\n",
-    "c.shape"
+    "condition = [\n",
+    "    \"A photo of a lung xray with Edema,Pneumonia and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray with Lung Opacity,Pneumonia,Pneumothorax and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray with Fracture\",\n",
+    "    \"A photo of a lung xray with Cardiomegaly,Consolidation and Support Devices\",\n",
+    "    \"A photo of a lung xray with Atelectasis and Pneumothorax\",\n",
+    "    \"A photo of a lung xray with Support Devices\",\n",
+    "    \"A photo of a lung xray with Lung Opacity,Pleural Effusion and Support Devices\",\n",
+    "    \"A photo of a lung xray with Consolidation,Atelectasis and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray with Pleural Other and Support Devices\",\n",
+    "    \"A photo of a lung xray with Lung Opacity,Edema and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray with Edema,Atelectasis and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray with Lung Opacity and Consolidation\",\n",
+    "    \"A photo of a lung xray with Cardiomegaly,Lung Opacity,Edema,Pleural Effusion and Support Devices\",\n",
+    "    \"A photo of a lung xray with Lung Opacity,Edema,Pleural Effusion and Support Devices\",\n",
+    "    \"A photo of a lung xray with Lung Opacity and Pleural Effusion\",\n",
+    "    \"A photo of a lung xray\",\n",
+    "]\n",
+    "c = emb_obj(condition)\n",
+    "c.shape\n"
    ]
   }
  ],
